--- a/pymc_learn_sphinx_theme/layout.html
+++ b/pymc_learn_sphinx_theme/layout.html
@@ -6,28 +6,27 @@
 {% block extrabody %}
 
 <nav id="explore-links">
-  <a href="https://docs.pymc-learn.org/">
-    <img class="caption" src="{{ pathto('_static/images/pymc3_logo.png', 1) }}"/>
+  <a href="http://docs.pymc-learn.org/">
+    <img class="caption" src="{{ pathto('_static/images/pymc_learn_logo.png', 1) }}"/>
   </a>
 
   <ul>
     <li>
       <a>Get Started</a>
       <ul>
-        <li><a href="https://docs.pymc-learn.org/en/latest/install.html"> Install </a></li>
-        <li><a href="https://docs.pymc-learn.org/en/latest/examples.html"> Examples </a></li>
-        <li><a href="https://docs.pymc-learn.org/en/latest/why.html"> Why Pymc-learn? </a></li>
-        <li><a href="https://mybinder.org/v2/gh/pymc-learn/pymc-learn/master?filepath=%2Fdocs%2Fnotebooks?urlpath=lab"> Try Online </a></li>
+        <li><a href="http://docs.pymc-learn.org/en/latest/install.html"> Install </a></li>
+        <li><a href="http://docs.pymc-learn.org/en/latest/why.html"> Why Pymc-learn? </a></li>
+        <li><a href="http://mybinder.org/v2/gh/pymc-learn/pymc-learn/master?filepath=%2Fdocs%2Fnotebooks?urlpath=lab"> Try Online </a></li>
       </ul>
     </li>
 
     <li>
       <a href="">Models</a>
       <ul>
-        <li><a href="https://docs.pymc-learn.org/en/latest/regression.html">Regression</a></li>
-        <li><a href="https://docs.pymc-learn.org/en/latest/dataframe.html">Classification</a></li>
-        <li><a href="https://docs.pymc-learn.org/en/latest/bag.html">Clustering</a></li>
-        <li><a href="https://docs.pymc-learn.org/en/latest/delayed.html">Neural Networks</a></li>
+        <li><a href="http://docs.pymc-learn.org/en/latest/regression.html">Regression</a></li>
+        <li><a href="http://docs.pymc-learn.org/en/latest/classification.html">Classification</a></li>
+        <li><a href="http://docs.pymc-learn.org/en/latest/mixture.html">Clustering</a></li>
+        <li><a href="http://docs.pymc-learn.org/en/latest/neural-network.html">Neural Networks</a></li>
       </ul>
     </li>
 
@@ -38,7 +37,7 @@
         <li><a href="https://github.com/pymc-learn">Github</a></li>
         <li><a href="https://stackoverflow.com/questions/tagged/pymc-learn">Stack Overflow</a></li>
         <li><a href="https://twitter.com/pymc_learn">Twitter</a></li>
-        <li><a href="https://blog.pymc-learn.org/"> Developer Blog </a></li>
+        <li><a href="http://blog.pymc-learn.org/"> Developer Blog </a></li>
       </ul>
     </li>
   </ul>
