--- a/pymc_learn_sphinx_theme/layout.html
+++ b/pymc_learn_sphinx_theme/layout.html
@@ -16,6 +16,7 @@
       <ul>
         <li><a href="http://docs.pymc-learn.org/en/latest/install.html"> Install </a></li>
         <li><a href="http://docs.pymc-learn.org/en/latest/why.html"> Why Pymc-learn? </a></li>
+        <li><a href="http://docs.pymc-learn.org/en/latest/regression.html"> Examples </a></li>
         <li><a href="http://mybinder.org/v2/gh/pymc-learn/pymc-learn/master?filepath=%2Fdocs%2Fnotebooks?urlpath=lab"> Try Online </a></li>
       </ul>
     </li>
@@ -23,10 +24,10 @@
     <li>
       <a href="">Models</a>
       <ul>
-        <li><a href="http://docs.pymc-learn.org/en/latest/regression.html">Regression</a></li>
-        <li><a href="http://docs.pymc-learn.org/en/latest/classification.html">Classification</a></li>
-        <li><a href="http://docs.pymc-learn.org/en/latest/mixture.html">Clustering</a></li>
-        <li><a href="http://docs.pymc-learn.org/en/latest/neural-network.html">Neural Networks</a></li>
+        <li><a href="http://docs.pymc-learn.org/en/latest/supervised_learning.html">Regression</a></li>
+        <li><a href="http://docs.pymc-learn.org/en/latest/supervised_learning.html">Classification</a></li>
+        <li><a href="http://docs.pymc-learn.org/en/latest/unsupervised_learning.html">Clustering</a></li>
+        <li><a href="http://docs.pymc-learn.org/en/latest/supervised_learning.html">Neural Networks</a></li>
       </ul>
     </li>
 
