--- a/pymc_learn_sphinx_theme/layout.html
+++ b/pymc_learn_sphinx_theme/layout.html
@@ -7,7 +7,7 @@
 
 <nav id="explore-links">
   <a href="http://docs.pymc-learn.org/">
-    <img class="caption" src="{{ pathto('_static/images/pymc_learn_logo.png', 1) }}"/>
+    <img class="caption" src="{{ pathto('_static/images/pymc-learn-logo-square.svg', 1) }}"/>
   </a>
 
   <ul>
